test/tests/stages/16_characters_and_strings/invalid_types/extra_credit/switch_on_string.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[18]:
  int
  identifier(main)
  (
  void
  )
  {
  switch
  (
  string literal("foo")
  )
  {
  default
  :
  return
  const int(0)
  ;
  }
  }
